# DevOps-Course-Workshop-Module-05

dockerfiles/: Dockerfile.cliapp  Dockerfile.geoapi  Dockerfile.webapp  docker-compose-redis.yml  docker-compose.yml  nginx.conf  run.sh
dockerfiles/geoapi/: app.py  pyproject.toml
