[tool.poetry]
name = "geoapi"
version = "0.1.0"
description = ""
authors = ["jnsha1 <jatin.n.shah@aexp.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

